--- a/10-12.Januar/content/durchfuehrung.tex
+++ b/10-12.Januar/content/durchfuehrung.tex
@@ -26,6 +26,6 @@ Zur Vorbereitung auf den Versuch sollen die Fourier-Koeffizienten von drei versc
 \end{eqnarray}
 
 \subsection{Fourier-Synthese}
-Mittels eines Oberwellengenerator sollen die vorher berechneten Spannungen möglichst genau aproximiert werden. Dazu werden zunächst die harmonische Oberschwingung auf den ersten Channel des Osziloskops und auf den zweiten ein vielfaches der Oberschwingung gelegt. Mittels des X-Y-Betriebs des Oszilisskop kann die Phase der n-ten Oberschwingung mit der, der harmonischen Abgestimmt werden. Dies geschieht durch die Lissajour Figuren. Anschließend wird mittels eines AC-Millivoltmeters die in der Vorbereitung berechnete Amplitude für die einzelnen Oberwellen eingestellt. Nachdem die Amplituden auf das richtige Abfallverhalten eingestellt wurden, wird das Oszilliskop in den X-T-Betrieb gestellt und die einzelenen Oberwellen addiert. Von dem Graphen der auf dem Oszilloskopen erscheint wird ein Thermodruck gemacht.
+Mittels eines Oberwellengenerator sollen die vorher berechneten Spannungen möglichst genau approximiert werden. Dazu werden zunächst die harmonische Oberschwingung auf den ersten Channel des Oszilloskops und auf den zweiten ein vielfaches der Oberschwingung gelegt. Mittels des X-Y-Betriebs des Oszilloskops kann die Phase der n-ten Oberschwingung mit der, der harmonischen Abgestimmt werden. Dies geschieht durch die Lissajour Figuren. Das auf dem Oszilloskop zu sehende Bild muss einer Funktion mit zwei Endpunkten gleichen und darf keine geschlossene Kurve sein. Anschließend wird mittels eines AC-Millivoltmeters die in der Vorbereitung berechnete Amplitude für die einzelnen Oberwellen eingestellt. Nachdem die Amplituden auf das richtige Abfallverhalten eingestellt ist, wird das Oszilliskop in den X-T-Betrieb gestellt und die einzelenen Oberwellen addiert. Von dem Graphen der auf dem Oszilloskopen erscheint wird ein Thermodruck gemacht.
 \subsection{Fourier-Analyse}
-Das Signal des Funktionsgenerator wird direkt an ein Oszilloskop angeschlossen. Dieses Foyetransformiert das Signal, nachdem man im Untermenü die entsprechende Einstellung getroffen hatt. Dabei ist darauf zu achten das die Skalierung hinreichend klein ist um genügend Peaks des Linienspektrums zu sehen. Die Nebenmaxima die durch die endliche Integration einer Zeit entstehen, sollen beim Ablesen vernachlässigt werden. Es sollen die Spannungswerte der Amplituden der Oberwelle entsprechend notiert werden um in der Auswertung eine Aussage über deren Abfallverhalten treffen zu können. Das Messprogramm wird für die 3 vorher berechneten Funktionen durchgeführt.
+Das Signal des Funktionsgenerator wird direkt an ein Oszilloskop angeschlossen. Dieses Fouriertransformiert das Signal, nachdem man im Untermenü die entsprechende Einstellung getroffen hat. Dabei ist darauf zu achten, dass die Skalierung hinreichend klein ist um genügend Peaks des Linienspektrums zu sehen. Die Nebenmaxima die durch die endliche Integration einer Zeit entstehen, sollen beim Ablesen vernachlässigt werden. Es sollen die Spannungswerte der Amplituden der Oberwelle entsprechend notiert werden um in der Auswertung eine Aussage über deren Abfallverhalten treffen zu können. Das Messprogramm wird für die 3 vorher berechneten Funktionen durchgeführt.
