--- a/10-12.Januar/content/theorie.tex
+++ b/10-12.Januar/content/theorie.tex
@@ -12,26 +12,26 @@ als auch periodisch in der Zeit
 \end{equation}
 zu wiederholen. Dabei ist $T$ die Periodendauer und $D$ die Distanz nach dem sich ein Vorgang wiederholt. Solche Vorgänge lassen sich mittels der $2 \pi$ periodoschen Funktionen Sinus und Cosinus beschreiben, welche die Form
 \begin{eqnarray}
-  f(t) & = a sin \left( \frac{2 \pi}{T} t \right) \ ,	\\
-  f(t) & = a cos \left( \frac{2 \pi}{T} t \right)
+  f(t) & = a \sin \left( \frac{2 \pi}{T} t \right) \ ,	\\
+  f(t) & = a \cos \left( \frac{2 \pi}{T} t \right)
   \label{eqn:sin}
 \end{eqnarray}
 haben. Mittels des Fourierschen Theorem lassen sich sämtliche periodische Vorgänge in der Natur, mit Hilfe der beiden Funktionen beschreiben.
 \begin{equation}
-  \frac{1}{2} a_0 + \sum^{\infty}_{n=1} \left( a_\text{n} cos n \frac{2 \pi}{T} t + b_\text{n} sin n \frac{2 \pi}{T} t \right)
+  f(t) = \frac{1}{2} a_0 + \sum^{\infty}_{n=1} \left( a_\text{n} \cos \left(n \frac{2 \pi}{T} t \right) + b_\text{n} \sin \left(n \frac{2 \pi}{T} t \right) \right)
   \label{eqn:fourier}
 \end{equation}
 Vorraussetzung ist jedoch, dass die Reihe gleichmäßig konvergiert. Die Koeffizienten lassen sich nach
 \begin{eqnarray}
-  a_\text{n} = \frac{2}{T} \int^0_T f(t) cos n \frac{2 \pi}{T} t dt	\\
-  b_\text{n} = \frac{2}{T} \int^0_T f(t) sin n \frac{2 \pi}{T} t dt
+  a_\text{n} = \frac{2}{T} \int^0_T f(t) \cos \left(n \frac{2 \pi}{T} t \right) dt	\\
+  b_\text{n} = \frac{2}{T} \int^0_T f(t) \sin \left(n \frac{2 \pi}{T} t \right) dt
   \label{eqn:Koef}
 \end{eqnarray}
 berechnen. Dabei treten nur vielfache der $\nu_1$ Grundfrequenz auf, welche als harmonische Oberschwingung bezeichnet wird. Beim Auftragen der Amplitude gegen die Oberwellen ergibt sich ein Linienspektrum,
 \begin{figure}
   \centering
   \includegraphics[height=4cm]{picture/Frequenzspektrum.png}
-  \caption{Frequenzspektrum einer periodischen Schwingung}
+  \caption{Frequenzspektrum einer periodischen Schwingung \cite{sample}.}
   \label{fig:fre}
 \end{figure}
 bei welchen die Amplituden für $n \rightarrow \infty$ gegen null gehen sollte, wie man Abbildung \ref{fig:fre} entnehmen kann. Falls es sich bei der fourieranalysierten Funktion nicht um eine Periodische Funktion handeln sollte, ergibt sich dort ein kontinuierliches Spektrum.
@@ -40,7 +40,7 @@ Mit Hilfe der Fourier-Transformation ist es möglich das Frequenzspektrum sowohl
   g(\nu) = \int^{\infty}_{- \infty} f(t) e^{-i \nu t} dt
   \label{eqn:four-trafo}
 \end{equation}
-Da im Versuch nur über ein endlich langes Zeitintervall integriert werden kann, sind aufgrund der nicht periodizität Nebenmaxima zu erwarten.
+Da im Versuch nur über ein endlich langes Zeitintervall integriert werden kann, sind aufgrund der nicht periodizität Nebenmaxima zu erwarten, außerdem sind die Maxima keine Delta-Peaks sondern sind in die breite gefächert.
 \subsection{Fehlerrechnung}
 Sämtliche Fehlerrechnungen werden mit Hilfe von Python 3.4.3 durchgeführt.
 \subsubsection{Mittelwert}
