--- a/10-12.Januar/lit.bib
+++ b/10-12.Januar/lit.bib
@@ -1,5 +1,5 @@
 @manual{sample,
   author = {TU Dortmund},
-  title = {Versuch zum Literaturverzeichnis},
+  title = {Versuch 351: Fourier-Analyse und -Synthese},
   year = 2014
 }
