--- a/11-19.Januar/content/auswertung.tex
+++ b/11-19.Januar/content/auswertung.tex
@@ -20,7 +20,7 @@ gemessen.
 
 \subsection{Frequenzverhältniss von Schwebung und Schwingung}
 
-Die dem experimentellen Aufbau entnommer Verhältniss aus Schwingungs- und Schwebungsfrequenz $n_\text{exp}$ ist in Tabelle \ref{tab:n} aufgeführt. Aus Formel \ref{eqn:??} und \ref{eqn:??}, lässt sich das theoretische Frequenzverhältniss berechnen.
+Die dem experimentellen Aufbau entnommer Verhältniss aus Schwingungs- und Schwebungsfrequenz $n_\text{exp}$ ist in Tabelle \ref{tab:n} aufgeführt. Aus Formel \ref{eqn:vp} und \ref{eqn:vm}, lässt sich das theoretische Frequenzverhältniss berechnen.
 \begin{equation}
   n_\text{t} = \frac{ v_\text{t}^+ + v_\text{t}^- }{2(v_\text{t}^- - v_\text{t}^+)}
   \label{eqn:n_t}
@@ -50,7 +50,7 @@ Die theoretischen Frequenzverhältnisse $n_\text{t}$ für die einzelnen Kondensa
 \end{table}
 Ursachen für die Abweichungen vom Theoriewert liegen einerseits dran, dass immer nur die Maxima eine einzige Schwebung gezählt wurden. Ein Verbesserungspotential besteht darin, mehrere Schwingungen zu betrachten und den Wert anschließend zu mitteln.
 \subsection{Eigenfrequenzen des Systems (Lissajour Figur)}
-Sowohl die experimentell ermittelten Werte $v_\text{e}^+$ und  $v_\text{e}^-$, als auch die Theoriewerte die sich nach Formel \ref{eqn:??} und \ref{eqn:??} berechnen sind in Tabelle \ref{tab:eigen} aufgeführt. Von diesen Werten wurde die Abweichung berechnet und ebenfalls in der Tabelle aufgeführt.
+Sowohl die experimentell ermittelten Werte $v_\text{e}^+$ und  $v_\text{e}^-$, als auch die Theoriewerte die sich nach Formel \ref{eqn:vp} und \ref{eqn:vm} berechnen sind in Tabelle \ref{tab:eigen} aufgeführt. Von diesen Werten wurde die Abweichung berechnet und ebenfalls in der Tabelle aufgeführt.
 \begin{table}
   \centering
   \begin{tabular}{c c c c c c c}
@@ -98,7 +98,7 @@ Aufgrund des nicht immer eindeutigen Maxima wird ein Ablesefehler der Zeit von 2
     \num{0.997 +- 0.005}    & \num{816 +- 2} &\num{55.30 +- 0.06} & 2 & \num{176 +- 2} & \num{35.55 +- 0.06} & 1 \\
     \bottomrule
   \end{tabular}
-  \caption{<+Caption text+>}
+  \caption{Eigenfrequenzen in Abhängigkeit der Koppelkondensatoren}
   \label{tab:beep}
 \end{table}
 Auffällig ist auch das diese Messung einen fürs Praktikum relativ geringe Messunsicherheit von \le 2 \% aufweist. Daher kann die Messung als gelungen bezeichnet werden.
