--- a/11-19.Januar/content/theorie.tex
+++ b/11-19.Januar/content/theorie.tex
@@ -68,6 +68,7 @@ Die Lösung von \ref{eqn:DGL1} ist
 mit der Schwingungsfrequenz
 \begin{equation}
 	\nu^+ = \frac{1}{2 \pi \sqrt{LC}} \ .
+	\label{eqn:vp}
 \end{equation}
 Die Lösung von \ref{eqn:DGL2} ist
 \begin{equation}
@@ -76,6 +77,7 @@ Die Lösung von \ref{eqn:DGL2} ist
 mit der Schwingungsfrequenz
 \begin{equation}
 \nu^- = \frac{1}{2 \pi \sqrt{L \left(\frac{1}{C} + \frac{2}{C_\text{K}} \right)^{-1}}} \ .
+	\label{eqn:vm}
 \end{equation}
 Für die ursprünglichen Variablen $I_1$ und $I_2$ ergibt sich nun
 \begin{equation}
