Fourier Analyse fertig

--- a/10-12.Januar/content/auswertung.tex
+++ b/10-12.Januar/content/auswertung.tex
@@ -3,8 +3,8 @@
 
 \subsection{Fourier-Analyse}
 \label{sec:Analyse}
-In der folgenden Messreihe werden drei periodische elektrische Schwingungen in ihre Fourier-Komponenten zerlegt und diese mit den Ergebnissen aus dem Fourierschen Theorem (siehe Gl. (\ref{eqn:fourier})) verglichen. Die jeweils verwendeten Schwingungen haben eine Frequenz von 100 kHz. $U_\text{theo, n}$ berechnet sich aus den Fourierkoeffizienten(siehe Gl. \ref{eqn:Koef}) der jeweiligen Schwingung und $U_\text{exp, n}$ wird aus den Diagrammen \ref{fig:SägeB} bis \ref{fig:DreieckB} abgelesen. In den Tabellen \ref{tab:Säge} bis \ref{tab:Drei} sind die Ergebnisse aufgelistet. \\
-Die Fehler werden mit Gleichung \ref{eqn:Fehler} berechnet.
+In der folgenden Messreihe werden drei periodische elektrische Schwingungen in ihre Fourier-Komponenten zerlegt und diese mit den Ergebnissen aus dem Fourierschen Theorem (siehe Gl. (\ref{eqn:fourier})) verglichen. Die jeweils verwendeten Schwingungen haben eine Frequenz von 100 kHz. $U_\text{theo, n}$ berechnet sich aus den Fourierkoeffizienten(siehe Gl. (\ref{eqn:Koef})) der jeweiligen Schwingung und $U_\text{exp, n}$ wird aus den Diagrammen \ref{fig:SägeB} bis \ref{fig:DreieckB} abgelesen. In den Tabellen \ref{tab:Säge} bis \ref{tab:Drei} sind die Ergebnisse aufgelistet. \\
+Die Fehler werden mit Gleichung (\ref{eqn:Fehler}) berechnet.
 \begin{equation}
   \sigma_\text{n} = \frac{U_\text{exp, n} - U_\text{theo, n}}{U_\text{theo, n}} \cdot 100 \ .
   \label{eqn:Fehler}
@@ -132,7 +132,7 @@ Die eingestellten Amplituden der Rechteck- und der Sägezahnspannung sind in Tab
   \label{fig:Recht}
 \end{figure}
 
-Die eingestellten Amplituden der Rechteck- und der Sägezahnspannung sind in Tabelle \ref{tab:Dreis} aufgelistet.
+Die eingestellten Amplituden der Dreiecksspannung sind in Tabelle \ref{tab:Dreis} aufgelistet.
 
 \begin{table}[H]
   \centering
