--- a/12-26.Januar/content/diskussion.tex
+++ b/12-26.Januar/content/diskussion.tex
@@ -5,9 +5,9 @@ Aus dem gegebenen Wert für den Elastizitätsmodul $E = 21 \cdot 10^{10} \frac{\
 \begin{gather*}
   G_\text{Literatur} = 8.2 \cdot 10^{10} \frac{\text{N}}{\text{m}^2} \\
   G_\text{exp} = (\num{4.99 +- 0.04}) \cdot 10^{10} \frac{\text{N}}{\text{m}^2} \\
-  \text{Abweichung von:} \ 40.9 \%
+  \text{Abweichung von:} \ 40.9 \ \%
 \end{gather*}
 Da der Unterschied sehr groß ist, ist vermutlich der Magnet in der Kugel nicht richtig ausgerichtet gewesen, wodurch sich die Periodendauer verändert. Außerdem kann es sein, dass die Helmholzspulen unter dem Effekt der Hysterese litten, da sie vorher bereits verwendet wurden.
 
 \subsection{Erdmagnetfeld}
-Der Literaturwert der Horizontalkomponente des Erdmagnetfeldes ist $B_\text{H,Literatur} = 19.317 \mu$T \cite{Literatur}. Der in diesem Versuch ermittelte Wert $B_\text{h} = (\num{65.0 +- 8.0}) \mu$ T weicht sehr stark von dem Literaturwert ab, dies kann unteranderem an der falschen Ausrichtung des Dipolmagneten in der Kugel liegen.  
+Der Literaturwert der Horizontalkomponente des Erdmagnetfeldes ist \\ $B_\text{H,Literatur} = 19.304$ $\mu$T \cite{Literatur}. Der in diesem Versuch ermittelte Wert \\ $B_\text{h} = (\num{65.0 +- 8.0})$ $\mu$T weicht sehr stark von dem Literaturwert ab, dies kann unteranderem an der falschen Ausrichtung des Dipolmagneten in der Kugel liegen.  
