--- a/12-26.Januar/lit.bib
+++ b/12-26.Januar/lit.bib
@@ -4,3 +4,10 @@
   year = 2014,
   address = {Link einfügen},
 }
+
+@manual{Literatur,
+  author = { },
+  title = {Horizontale Erdmagnetfeldkomponente für Dortmund},
+  year = 2016,
+  address = {http://www-app1.gfz-potsdam.de/cgi-bin/igrf.pl}
+}
