--- a/12-26.Januar/header-matplotlib.tex
+++ b/12-26.Januar/header-matplotlib.tex
@@ -7,6 +7,7 @@
 % Fonteinstellungen
 \usepackage{fontspec}
 % Latin Modern Fonts werden automatisch geladen
+\usepackage{textcomp}
 
 \usepackage[
   math-style=ISO,    % ┐
